update README.md;update 一个简单的例子.md;

--- a/myBatis/一个简单的例子.md
+++ b/myBatis/一个简单的例子.md
@@ -42,7 +42,7 @@ public class Post {
 
 ### mybatis 核心配置文件
 现在开始正式接触 mybatis, 首先将 mybatis 的 jar 包和 mysql 的驱动 jar 包加入到 classpath 中.  
-xml 是 mybatis 支持最为全面的配置方式, 下面的 xml 是 mybatis 的核心配置文件.
+xml 是 mybatis 支持最为全面的配置方式, 下面的 config/mybatis/configuration.xml 是 mybatis 的核心配置文件.
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE configuration PUBLIC "-//mybatis.org//DTD Config 3.0//EN" "http://mybatis.org/dtd/mybatis-3-config.dtd">
@@ -53,7 +53,7 @@ xml 是 mybatis 支持最为全面的配置方式, 下面的 xml 是 mybatis 的
 			<transactionManager type="jdbc" />
 			<dataSource type="POOLED">
 				<property name="driver" value="com.mysql.jdbc.Driver" />
-				<property name="url" value="jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8" />
+				<property name="url" value="jdbc:mysql://localhost:3306/test" />
 				<property name="username" value="root" />
 				<property name="password" value="1987810" />
 			</dataSource>
@@ -63,6 +63,66 @@ xml 是 mybatis 支持最为全面的配置方式, 下面的 xml 是 mybatis 的
 </configuration>
 ```
 其 root 标签为 configuration, 表示 mybatis 的相关配置. environments 标签配置数据库环境, 可以在其中配置多个环境, default 属性用于指定默认使用哪个环境. environment 标签配置具体的数据库环境, 其 id 属性用于标识该环境, environments 标签的 default 属性的值必须是其中一个 environment 标签 id 属性的值. dataSource 标签配置数据库连接池.
+
+### UserMapper 和 mapper 配置文件
+在 mybatis 中, 一般会为每个数据库表编写对应的 Mapper 类, 相当于 JDBC 中的 DAO 类. 与 DAO 不同的是, Mapper 一般都是接口, 我们只需要在其中定义好数据访问的方法即可. 下面的 UserMapper 接口中仅定义了一个方法:
+```java
+public interface UserMapper {
+	User getById(int id);
+}
+```
+接口定义好了, 接下来是否就是提供该接口的实现类呢? 在 mybatis 中, 使用者一般不需要提供 Mapper 接口的实现类, 而是由框架为我们提供实现类. 当然, mybatis 并不是万能的, 如果我们没有给它提供充足的信息, 它是无法为我们自动生成 Mapper 接口的实现类的.  
+我们可以通过 xml 文件给 mybatis 提供它所需的信息, 下面的 config/mybatis/mappers/UserMapper.xml 配置文件对应的是 UserMapper 接口.
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="cn.xing.mapper.UserMapper">
+	<select id="getById" parameterType="int" resultType="cn.xing.model.User">
+		SELECT id, name, email FROM user WHERE id=#{id}
+	</select>
+</mapper>
+```
+mapper 标签的 namespace 属性是 UserMapper 接口的全限定名, 表明该配置文件是为 UserMapper 接口准备的.  
+select 标签的 id 属性的值为 getById, 对应 UserMapper 接口中的 getById 方法. 其 parameterType 属性指定方法的参数为 int, 而 resultType 属性指定返回值. select 标签体中的 SQL 语句非常简单, 需要注意 SQL 语句中使用 `#{id}` 的形式引用 getById 方法的参数. mybatis 会自动将 SQL 语句的返回结果映射成 User 对象返回.  
+回到 config/mybatis/configuration.xml 文件, 在其中插入如下的片段:
+```xml
+<configuration>
+	<!-- 其余部分省略 -->
+	<mappers>
+		<mapper resource="config/mybatis/mappers/UserMapper.xml"/>
+	</mappers>
+	
+</configuration>
+```
+有了上面的配置文件, mybatis 就知道该如何为我们生成 UserMapper 接口的实现类了.  
+
+### Java API
+接下来使用 mybatis 提供的 API 调用测试 UserMapper 的 getById 方法.  
+```java
+public class Main {
+	public static void main(String[] args) throws Exception {
+		SqlSessionFactoryBuilder builder = new SqlSessionFactoryBuilder();
+		SqlSessionFactory factory = builder.build(Resources.getResourceAsReader("config/mybatis/configuration.xml"));
+		SqlSession session = null;
+		try {
+			session = factory.openSession();
+			UserMapper mapper = session.getMapper(UserMapper.class);
+			User user = mapper.getById(1);
+			
+			System.out.println("User: id = " + user.getId() + ", name = " + user.getName() + ", email = " + user.getEmail());
+		} finally {
+			if (session != null) {
+				session.close();
+			}
+		}
+	}
+}
+```
+通过 SqlSessionFactoryBuilder 对象的 build 方法能够得到 SqlSessionFactory 对象, 在 build 方法中需要指定核心配置文件的位置.  
+SqlSessionFactory 是 SqlSession 的工厂类, 其 openSession 方法返回一个 SqlSession 对象. SqlSession 的 getMapper(UserMapper.class) 方法返回 mybatis 为我们自动生成的 UserMapper 的实现类的实例. 
+最后不能忘了在 finally 块中关闭 session, 以释放资源.
+
+
 
 
 
