update README.md;update 一个简单的例子.md;

--- a/myBatis/一个简单的例子.md
+++ b/myBatis/一个简单的例子.md
@@ -120,7 +120,8 @@ public class Main {
 ```
 通过 SqlSessionFactoryBuilder 对象的 build 方法能够得到 SqlSessionFactory 对象, 在 build 方法中需要指定核心配置文件的位置.  
 SqlSessionFactory 是 SqlSession 的工厂类, 其 openSession 方法返回一个 SqlSession 对象. SqlSession 的 getMapper(UserMapper.class) 方法返回 mybatis 为我们自动生成的 UserMapper 的实现类的实例. 
-最后不能忘了在 finally 块中关闭 session, 以释放资源.
+最后不能忘了在 finally 块中关闭 session, 以释放资源.  
+运行 main 方法, 如果 user 表中存在 id 为1的数据, 将观察到输出信息.
 
 
 
